fix: allow CORS for localhost:5174 and production frontend URL